# saitynai-backend/saitynai-backend/Entities/TimeSlot.cs
@@ -7,7 +7,6 @@ public class TimeSlot : Entity
     public int EventId { get; set; }
     public Event Event { get; set; }
     public int? MaxParticipants { get; set; }
-    public bool IsAvailable { get; set; }
     public bool IsCancelled { get; set; }
     public List<User> Participants { get; set; } = new();
 }
