# saitynai-backend/saitynai-backend/Validators/TimeSlots/CreateTimeSlotCommandValidator.cs
@@ -14,8 +14,5 @@ public class CreateTimeSlotCommandValidator : AbstractValidator<CreateTimeSlotCo
 
         RuleFor(x => x.EndTime)
             .NotEmpty().WithMessage("EndTime is required.");
-        
-        RuleFor(x => x.IsAvailable)
-            .Must(x => x == false || x == true).WithMessage("IsAvailable is required.");
     }
 }
